2023-06-22/circular_primes/log.txt
   Compiling c2rust_out v0.0.0 (/home/c00834010/dev/crusts-benchmarks/2023-06-22/circular_primes)
error[E0425]: cannot find function `main_0` in this scope
   --> src/main.rs:104:30
    |
104 |         ::std::process::exit(main_0() as i32);
    |                              ^^^^^^ not found in this scope

For more information about this error, try `rustc --explain E0425`.
error: could not compile `c2rust_out` (bin "main") due to previous error
